--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+jar{
 
+}
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
